# xbmc-addon-xvdr

./: configure.in
addons/library.xbmc.addon/: libXBMC_addon.h
addons/library.xbmc.gui/: libXBMC_gui.h
addons/library.xbmc.pvr/: libXBMC_pvr.h
src/: Makefile.am
src/libxvdr/: Makefile.am  XVDRData.cpp  XVDRData.h  XVDRSession.cpp  XVDRSession.h  responsepacket.cpp  responsepacket.h  thread.h
src/xvdr/: XVDRDemux.cpp  XVDRDemux.h  XVDRSession.cpp  XVDRSession.h  client.cpp  responsepacket.cpp
